--- a/html/tienda.html
+++ b/html/tienda.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description"
-		content="Tienda de cafeteria spiti coffee and desserts con categorias de cursos cafe en grano o molido productos y gift cards">
+		content="Tienda de cafeteria spiti coffee and desserts con categorias de cursos cafe en grano o molido productos y gift cards" />
 	<meta name="keywords"
-		content="cafe, coffee, spiti, dulce, postre, curso cafe, cafe en grano, cafe molido, cafetera, manual, metodo de filtrado">
+		content="cafe, coffee, spiti, dulce, postre, curso cafe, cafe en grano, cafe molido, cafetera, manual, metodo de filtrado" />
 	<title>TIENDA</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
 	<link
 		href="https://fonts.googleapis.com/css2?family=Alegreya+SC&family=Cinzel:wght@400;500&family=Jura&family=Parisienne&display=swap"
-		rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
+		rel="stylesheet" />
+	<link rel="stylesheet" type="text/css" href="../css/style.css" />
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 	<nav class="navbar sticky-top navbar-expand-md navbar-light d-flex justify-content-around">
 		<div class="container-fluid d-flex justify-content-around">
 			<a href="../index.html">
-				<img class="logoCafe" src="../imagenes/logo.webp" alt="logo Spiti">
+				<img class="logoCafe" src="../imagenes/logo.webp" alt="logo Spiti" />
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
 				data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -52,13 +52,12 @@
 			</div>
 		</div>
 
-
-		<button class=" sticky " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-			aria-controls="offcanvasNavbar">
-			<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24"
-				class="shopping-card-icon">
-				<path fill="#2e2c36"
-					d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zM1 3c0 .55.45 1 1 1h1l3.6 7.59-1.35 2.44C4.52 15.37 5.48 17 7 17h11c.55 0 1-.45 1-1s-.45-1-1-1H7l1.1-2h7.45c.75 0 1.41-.41 1.75-1.03l3.58-6.49A.996.996 0 0020.01 4H5.21l-.67-1.43a.993.993 0 00-.9-.57H2c-.55 0-1 .45-1 1zm16 15c-1.1 0-1.99.9-1.99 2s.89 2 1.99 2 2-.9 2-2-.9-2-2-2z">
+		<button class="btn btn-outline-dark mx-5" type="button" data-bs-toggle="offcanvas"
+			data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+			<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bag-heart"
+				viewBox="0 0 16 16">
+				<path fill-rule="evenodd"
+					d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5v-.5Zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0ZM14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1ZM8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132Z">
 				</path>
 			</svg>
 		</button>
@@ -71,26 +70,26 @@
 				<div id="carrito"></div>
 			</div>
 		</div>
-
 	</nav>
 	<!-- fin nav -->
 
 	<!-- inicio de divisiones en la tienda -->
 	<div>
-		<div id="saludo">
-		</div>
+		<div id="saludo"></div>
 		<div>
 			<h3>CURSOS</h3>
 			<p>Aca encontraras todos nuestros cursos.</p>
-			<div id="cursos" class="d-flex justify-content-center flex-wrap ">
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafes.png" alt="Curso de tostado">
+			<div id="cursos" class="d-flex justify-content-center flex-wrap">
+				<div class="card m-2" style="width: 18rem">
+					<img class="card-img-top" src="../imagenes/cafes.png" alt="Curso de tostado" />
 					<div class="card-body">
-						<p class="card-text">Curso de tostado de granos. Nivel avanzado.</p>
+						<p class="card-text">
+							Curso de tostado de granos. Nivel avanzado.
+						</p>
 					</div>
 				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/pubCoffeMachine.png" alt="Curso de espresso">
+				<div class="card m-2" style="width: 18rem">
+					<img class="card-img-top" src="../imagenes/pubCoffeMachine.png" alt="Curso de espresso" />
 					<div class="card-body">
 						<p class="card-text">Curso de espresso. Nivel intermedio.</p>
 					</div>
@@ -100,21 +99,21 @@
 		<div>
 			<h3 id="cafe">CAFE</h3>
 			<p>Viajar por el mundo con nuestros distintos origenes.</p>
-			<div class="d-flex justify-content-center flex-wrap ">
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafehoney.webp" alt="Cafe Honey">
+			<div class="d-flex justify-content-center flex-wrap">
+				<div class="card m-2" style="width: 18rem">
+					<img class="card-img-top" src="../imagenes/cafehoney.webp" alt="Cafe Honey" />
 					<div class="card-body">
 						<p class="card-text">Cafe Honey para tostar.</p>
 					</div>
 				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafelavado.webp" alt="Cafe Lavado">
+				<div class="card m-2" style="width: 18rem">
+					<img class="card-img-top" src="../imagenes/cafelavado.webp" alt="Cafe Lavado" />
 					<div class="card-body">
 						<p class="card-text">Cafe Lavado tostado medio-claro.</p>
 					</div>
 				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafeverde.png" alt="Cafe verde">
+				<div class="card m-2" style="width: 18rem">
+					<img class="card-img-top" src="../imagenes/cafeverde.png" alt="Cafe verde" />
 					<div class="card-body">
 						<p class="card-text">Cafe verde para tostar.</p>
 					</div>
@@ -123,22 +122,25 @@
 		</div>
 		<div>
 			<h3 id="productos">PRODUCTOS</h3>
-			<p>Equipate con lo necesario para convertirte en el mejor barista de tu casa</p>
-			<div class="d-flex justify-content-center flex-wrap ">
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafemk.jpg" alt="Cafetera moka">
+			<p>
+				Equipate con lo necesario para convertirte en el mejor barista de tu
+				casa
+			</p>
+			<div class="d-flex justify-content-center flex-wrap">
+				<div class="card m-2" style="width: 18rem">
+					<img class="card-img-top" src="../imagenes/cafemk.jpg" alt="Cafetera moka" />
 					<div class="card-body">
 						<p class="card-text">Cafetera Moka.</p>
 					</div>
 				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafeex.jpg" alt="Cafe espresso">
+				<div class="card m-2" style="width: 18rem">
+					<img class="card-img-top" src="../imagenes/cafeex.jpg" alt="Cafe espresso" />
 					<div class="card-body">
 						<p class="card-text">Cafetera espresso.</p>
 					</div>
 				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/cafepf.jpg" alt="Cafetera de embolo">
+				<div class="card m-2" style="width: 18rem">
+					<img class="card-img-top" src="../imagenes/cafepf.jpg" alt="Cafetera de embolo" />
 					<div class="card-body">
 						<p class="card-text">Cafetera de embolo.</p>
 					</div>
@@ -147,23 +149,25 @@
 		</div>
 		<div>
 			<h3 id="giftcards">GIFT CARDS</h3>
-			<p>No sabes que regalarte a tu amigui barista? No te preocupes, regalale una gift card para que venga y
-				elija el mejor equipamiento</p>
-			<div class="d-flex justify-content-center flex-wrap flex-sm-wrap-reverse ">
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 500">
+			<p>
+				No sabes que regalarte a tu amigui barista? No te preocupes, regalale
+				una gift card para que venga y elija el mejor equipamiento
+			</p>
+			<div class="d-flex justify-content-center flex-wrap flex-sm-wrap-reverse">
+				<div class="card m-2" style="width: 18rem">
+					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 500" />
 					<div class="card-body">
 						<p class="card-text">Gift card de $500</p>
 					</div>
 				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 1000">
+				<div class="card m-2" style="width: 18rem">
+					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 1000" />
 					<div class="card-body">
 						<p class="card-text">Gift card de $1000</p>
 					</div>
 				</div>
-				<div class="card m-2" style="width: 18rem;">
-					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 2000">
+				<div class="card m-2" style="width: 18rem">
+					<img class="card-img-top" src="../imagenes/giftcard.png" alt="Gift card de 2000" />
 					<div class="card-body">
 						<p class="card-text">Gift card de $2000</p>
 					</div>
@@ -174,17 +178,18 @@
 
 	<!-- inicio Footer -->
 	<footer>
-
 		<!-- Redes -->
 		<section class="d-flex justify-content-around p-4 border-bottom mt-2">
 			<div>
 				<a href="" class="me-4 text-decoration-none text-reset fw-bold">
-					<img src="../imagenes/ic-ig.png" alt="icono instagram" class="icFooter"> ESPITI_COFFEE
+					<img src="../imagenes/ic-ig.png" alt="icono instagram" class="icFooter" />
+					ESPITI_COFFEE
 				</a>
 			</div>
 			<div>
 				<a href="" class="me-4 text-decoration-none text-reset fw-bold">
-					<img src="../imagenes/ic-fb.png" alt="icono facebook" class="icFooter"> ESPITI_COFFEE
+					<img src="../imagenes/ic-fb.png" alt="icono facebook" class="icFooter" />
+					ESPITI_COFFEE
 				</a>
 			</div>
 		</section>
@@ -194,23 +199,38 @@
 		<section class="d-flex justify-content-around m-2 flex-wrap flex-sm-wrap-reverse">
 			<div class="p-4">
 				<a href="sedes.html#infoPalermo" class="text-decoration-none text-reset">
-					<h6 class="text-uppercase fw-bold mb-4"> Palermo </h6>
-					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Armenia 1959</p>
-					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+					<h6 class="text-uppercase fw-bold mb-4">Palermo</h6>
+					<p>
+						<img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter" />Armenia 1959
+					</p>
+					<p>
+						<img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter" />
+						11-1234-5678
+					</p>
 				</a>
 			</div>
 			<div class="col-sm-12 col-md-4 col-lg-4">
 				<a href="sedes.html#infoCentro" class="text-decoration-none text-reset">
-					<h6 class="text-uppercase fw-bold mb-4"> Microcentro </h6>
-					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Av. Corrientes 999</p>
-					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+					<h6 class="text-uppercase fw-bold mb-4">Microcentro</h6>
+					<p>
+						<img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter" />Av. Corrientes 999
+					</p>
+					<p>
+						<img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter" />
+						11-1234-5678
+					</p>
 				</a>
 			</div>
 			<div class="p-4">
 				<a href="sedes.html#infoMadero" class="text-decoration-none text-reset">
-					<h6 class="text-uppercase fw-bold mb-4"> Puerto Madero </h6>
-					<p><img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter">Alicia Moreau 1604</p>
-					<p><img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter"> 11-1234-5678</p>
+					<h6 class="text-uppercase fw-bold mb-4">Puerto Madero</h6>
+					<p>
+						<img src="../imagenes/ic-ubi.png" alt="icono ubicacion" class="icFooter" />Alicia Moreau 1604
+					</p>
+					<p>
+						<img src="../imagenes/ic-wpp.png" alt="icono ubicacion" class="icFooter" />
+						11-1234-5678
+					</p>
 				</a>
 			</div>
 		</section>
@@ -221,7 +241,6 @@
 			© 2022 <b>Spiti</b> - Todos los Derechos Reservados.
 		</div>
 		<!-- Copyright -->
-
 	</footer>
 	<!-- Fin Footer -->
 
@@ -229,7 +248,6 @@
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
 		crossorigin="anonymous"></script>
 	<script src="../js/tienda.js"></script>
-
 </body>
 
 </html>
